k8s/applications/utils/searxng/base/Service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: searxng
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: searxng
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
